--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="padding_normal">14.dp</dimen>
     <dimen name="padding_medium">16.dp</dimen>
     <dimen name="padding_large">24.dp</dimen>
+
+    <dimen name="image_list_height">160.dp</dimen>
+    <dimen name="image_details_height">250.dp</dimen>
 </resources>
